# Avalanche-Matchmaking-Protocol

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Demo.sh  LICENSE  Makefile  README.md  ROADMAP.md  SCHEDULE.md  SECURITY.md  SECURITY_REVIEW.md  UPGRADE.md  cargo.toml  deny.toml  dependencies.sh  docker-compose.yml  docs.json  e2e_verify.sh  env_setup.sh  foundry.toml  mvp_dependency_checker.sh  mvp_setup.sh  prodpath.md  rust-toolchain.toml  schema.json  test.json  test_e2e.sh  test_mvp.sh  tore --staged amp-sdk
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs-check.yml  release.yml  supply-chain.yml
amp-benches/: Cargo.toml
amp-benches/benches/: matchstore.rs
amp-benches/src/: lib.rs
amp-benches/tests/: latency_gate.rs
amp-demo-gateway/: Cargo.toml  build.rs
amp-demo-gateway/src/: main.rs
amp-examples/basic-matchmaking/: package.json
amp-examples/basic-matchmaking/src/: index.ts
amp-integration-tests/: Cargo.toml
amp-integration-tests/src/: main.rs
amp-loadtest/: Cargo.toml  build.rs
amp-loadtest/src/: main.rs
amp-match-core/: Cargo.toml  README.md
amp-match-core/examples/: embedded.rs
amp-match-core/src/: glicko2.rs  lib.rs  queue.rs  rules.rs  types.rs
amp-match-core/tests/: integration.rs
amp-relayer/: Cargo.toml  README.md  build.rs
amp-relayer/src/: config.rs  custodial.rs  error.rs  gas.rs  main.rs  nonce.rs  settlement.rs
amp-sdk/: README.md  capnpc-csharp  generate_bindings.sh  package_sdks.sh
amp-sdk/cpp/: CMakeLists.txt
amp-sdk/cpp/include/amp/: client.hpp  eip712.hpp  keccak256.hpp  matchmaking.hpp  types.hpp
amp-sdk/cpp/src/: client.cpp  eip712.cpp
amp-sdk/cpp/tests/: eip712_test.cpp
amp-sdk/cpp/unreal/AMP/: AMP.uplugin  README.md
amp-sdk/cpp/unreal/AMP/Source/AMP/: AMP.Build.cs
amp-sdk/cpp/unreal/AMP/Source/AMP/Private/: AMPClientObject.cpp  AMPModule.cpp
amp-sdk/cpp/unreal/AMP/Source/AMP/Public/: AMPClientObject.h
amp-sdk/cpp_example/: CMakeLists.txt  README.md
amp-sdk/cpp_example/include/: AmpClient.hpp
amp-sdk/cpp_example/src/: AmpClient.cpp
amp-sdk/csharp/AmpSdk/: AmpClient.cs  AmpSdk.asmdef  AmpSdk.csproj  Matchmaking.cs  Types.cs  link.xml  package.json
amp-sdk/csharp/AmpSdk.Tests/: AmpSdk.Tests.csproj  OutcomeEip712Tests.cs
amp-sdk/csharp_example/: AmpClient.cs  Program.cs  README.md  csharp_example.csproj
amp-sdk/docs/: SDK_USAGE.md
amp-sdk/examples/cpp/: CMakeLists.txt
amp-sdk/examples/cpp/src/: main.cpp
amp-sdk/examples/csharp/: AmpClient.cs  Program.cs  csharp_example.csproj
amp-sdk/examples/js/: example.mjs
amp-sdk/go/: go.mod  go.sum
amp-sdk/go/client/: client.go  (+3 more)
amp-sdk/js/: README.md  package.json  tsconfig.json
amp-sdk/js/native/: Cargo.toml
amp-sdk/js/native/src/: lib.rs
amp-sdk/python/: pyproject.toml
amp-sdk/python/amp_sdk/: __init__.py  client.py  matchmaking.py  types.py
amp-sdk/python/tests/: test_client.py
amp-sdk/rust/: Cargo.toml  build.rs
amp-sdk/rust/src/: amp_telemetry_capnp.rs  game_core_capnp.rs  game_registry_capnp.rs  game_types_capnp.rs  inventory_capnp.rs  lib.rs  match_capnp.rs  matchmaking_rules_capnp.rs  player_profile_capnp.rs  relayer_capnp.rs  security_capnp.rs  service_capnp.rs  tournament_capnp.rs
amp-sdk/schemas/: amp_telemetry.capnp  game_core.capnp  game_registry.capnp  game_types.capnp  go.capnp  inventory.capnp  match.capnp  matchmaking_rules.capnp  player_profile.capnp  relayer.capnp  rust.capnp  security.capnp  service.capnp  tournament.capnp
amp-server/: Cargo.toml  README.md  build.rs
amp-server/src/: auth.rs  game_registry_service.rs  main.rs  match_queue.rs  matchmaker.rs  persistence.rs  player_service.rs  rules.rs  state.rs
amp-telemetry/: Cargo.toml  README.md  build.rs
amp-telemetry/src/: lib.rs  main.rs
amp-tls/: Cargo.toml
amp-tls/src/: lib.rs
cache/: solidity-files-cache.json
contracts/: .env.example  README.md  deploy_fuji.sh  deployment-fuji.json  foundry.toml  slither.config.json
contracts/script/: Deploy.s.sol  FinalizeGovernance.s.sol
contracts/src/: AMPRegistry.sol  AMPSettlement.sol  AMPTypes.sol  IAMPRegistry.sol  IAMPSettlement.sol
contracts/test/: AMPGovernance.t.sol  AMPInvariants.t.sol  AMPRegistry.t.sol  AMPSettlement.t.sol
demo-website/: README.md  index.html
docker/: amp-relayer.Dockerfile  amp-server.Dockerfile  amp-telemetry.Dockerfile
docker/localnet/: docker-compose.yml
docs/: README.md  architecture.mdx  benchmarks.md  beta-guide.mdx  capnp-schemas.mdx  competitive-analysis.mdx  contracts-reference.mdx  faq.mdx  glossary.mdx  gtm-and-vision.mdx  index.mdx  integration-guide.mdx  match-transcripts.mdx  pricing-and-subscriptions.mdx  roadmap.mdx  running-a-verifier.mdx  sdk-overview.mdx  security-review.mdx  signing.mdx  testing.mdx  verifier-architecture.mdx
docs/deployment-checklists/: contracts.md  matchmaker.md  schemas.md  sdk.md  security.md  verifier.md
match_maker/: Cargo.toml  README.md  build.rs
match_maker/src/: gc_impl.rs  main.rs  mm_impl.rs
mm-client/: Cargo.toml  README.md  build.rs
mm-client/src/: main.rs
schemas/: README.md  game_types.capnp  match.capnp  service.capnp
scripts/: loadtest-local.sh  python_match.py  run_clients_docker.sh  setup_fuji.sh  start-localnet.sh
sdk/: README.md
sdk/cpp/: CMakeLists.txt
sdk/cpp/include/: AmpClient.hpp
sdk/cpp/src/: AmpClient.cpp  main.cpp
sdk/cpp/src/schemas/: game_types.capnp.c++  game_types.capnp.h  match.capnp.c++  match.capnp.h  rust.capnp.c++  rust.capnp.h  service.capnp.c++  service.capnp.h
sdk/cpp/src/schemas/home/kodr/Avax/amp/schemas/: game_types.capnp.c++  match.capnp.c++  match.capnp.h  service.capnp.c++  service.capnp.h
sdk/js/: README.md  package-lock.json  package.json  sim.ts  tsconfig.json
trace-viewer/: Cargo.toml  README.md  build.rs  index.html  sample.json
trace-viewer/src/: main.rs
verifier/: Cargo.toml
verifier/src/: main.rs  verifier_impl.rs
web/: package-lock.json  package.json
web/src/: App.css  App.tsx  index.css
(+23 files in other folders)
