[package]
name = "amp-benches"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Microbenchmarks for AMP hot paths (Phase 2.6). The matchstore bench proves the DashMap-vs-ArcSwap win."

[dependencies]
dashmap = "6.0"
arc-swap = "1"
rustc-hash = "2"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "matchstore"
harness = false
