[package]
name = "amp-demo-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
capnp = "0.19"
capnp-rpc = "0.19"
hex = "0.4"
dotenv = "0.15"
anyhow = "1"
futures-util = "0.3"

[build-dependencies]
capnpc = "0.19"
