[package]
name = "amp-integration-tests"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
capnp = "0.19"
capnp-rpc = "0.19"
tokio-util = { version = "0.7", features = ["compat", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
ethers = { version = "2.0", features = ["rustls", "ws"] }
ethers-core = "2.0"
ethers-signers = "2.0"
uuid = { version = "1.20", features = ["v4"] }
hex = "0.4"
futures-util = "0.3"
tempfile = "3"
sled = "0.34"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
capnpc = "0.19"
