[package]
name = "amp-loadtest"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
capnp = "0.19"
capnp-rpc = "0.19"
tokio-util = { version = "0.7", features = ["compat"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
hdrhistogram = "7"
ethers-core = "2.0"
ethers-signers = "2.0"

[build-dependencies]
capnpc = "0.19"
