[package]
name = "amp-loadtest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
capnp = "0.19"
capnp-rpc = "0.19"
tokio-util = { version = "0.7", features = ["compat"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
hdrhistogram = "7"
# Phase 3.4: ethers replaced by alloy (signing + primitives only).
alloy-primitives = "1"
alloy-signer = "2"
alloy-signer-local = "2"
amp-sdk = { path = "../amp-sdk/rust" }

[build-dependencies]
capnpc = "0.19"
