[package]
name = "amp-match-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Embeddable Glicko-2 matchmaking + rule-evaluation library. Pull this in if you want AMP-quality matchmaking without the AMP server."
categories = ["game-development", "algorithms"]
keywords = ["matchmaking", "glicko2", "glicko", "rating", "game"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
proptest = "1"
