[package]
name = "amp-relayer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = { version = "2.0", features = ["rustls", "ws"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
thiserror = "1.0"
dotenv = "0.15"
