[package]
name = "amp-relayer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
ethers = { version = "2.0", features = ["rustls", "ws"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
thiserror = "2"
dotenv = "0.15"
capnp = "0.19"
capnp-rpc = "0.19"
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat", "rt"] }
sled = "0.34"
dashmap = "6.0"
tokio-rustls = "0.24"
rustls-pemfile = "1"
rustls = "0.21"

[build-dependencies]
capnpc = "0.19"
