[package]
name = "amp-relayer"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
ethers = { version = "2.0", features = ["rustls", "ws"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
thiserror = "2"
dotenv = "0.15"
capnp = "0.19"
capnp-rpc = "0.19"
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat", "rt"] }
sled = "0.34"
dashmap = "6.0"
amp-tls = { path = "../amp-tls" }
sha2 = "0.10"
# Observability (release Phase 7): Prometheus /metrics endpoint.
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false, features = ["http-listener"] }

[build-dependencies]
capnpc = "0.19"
