[package]
name = "AMP-Server"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
capnp = "0.19"
capnp-rpc = "0.19"
ethers-core = "2.0"
tokio-util = { version = "0.7", features = ["compat", "rt"] }
anyhow = "1.0"
uuid = { version = "1.20.0", features = ["v4"] }
futures-util = "0.3.32"
ethers-signers = "2.0"
amp-telemetry = { path = "../amp-telemetry" }
tracing = "0.1.44"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sled = "0.34"
dashmap = "6.0"
thiserror = "2"
hex = "0.4"
dotenv = "0.15"
amp-tls = { path = "../amp-tls" }
arc-swap = "1.6.0"
socket2 = { version = "0.5", features = ["all"] }
num_cpus = "1.16"

[build-dependencies]
capnpc = "0.19"

[dev-dependencies]
rand = "0.8"
