[package]
name = "amp-telemetry"
version = "0.0.1"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0"
capnp = "0.19"
capnp-rpc = "0.19"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat", "rt"] }
futures-util = "0.3"
hex = "0.4.3"
dotenv = "0.15"

[build-dependencies]
capnpc = "0.19"
