[package]
name = "AMP-Server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
capnp = "0.19"
capnp-rpc = "0.19"
ethers-core = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7.18", features = ["compat"] }
anyhow = "1.0.100"

[build-dependencies]
capnpc = "0.19"
