[package]
name = "AMP-Server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
capnp = "0.19"
capnp-rpc = "0.19"
ethers-core = "2.0"
tokio-util = { version = "0.7.18", features = ["compat"] }
anyhow = "1.0.100"
uuid = { version = "1.20.0", features = ["v4"] }
futures-util = "0.3.32"
ethers-signers = "2.0.14"
lazy_static = "1.5.0"
ws_stream_tungstenite = "0.15.0"
async-tungstenite = { version = "0.29", features = ["tokio-runtime"] }

[build-dependencies]
capnpc = "0.19"
