[package]
name = "mm-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
capnp = "0.19"
capnp-rpc = "0.19"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
async-tungstenite = { version = "0.29", features = ["tokio-runtime"] }
futures-util = "0.3.32"
ws_stream_tungstenite = "0.15.0"
hex = "0.4.3"

[build-dependencies]
capnpc = "0.19"
