[package]
name = "amp-sdk"
version = "0.0.1"
edition = "2024"
description = "Avalanche Matchmaking Protocol SDK for Rust"
license = "Apache-2.0"
repository = "https://github.com/avalanche-matchmaking-protocol/amp"
homepage = "https://github.com/avalanche-matchmaking-protocol/amp"
documentation = "https://docs.amp.avalanche.dev"

[lib]
name = "amp_sdk"
path = "src/lib.rs"

[features]
default = ["serde"]

[dependencies]
capnp = "0.19"
capnp-rpc = "0.19"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
bytes = "1.5"
hex = "0.4"
tokio = { version = "1.35", features = ["net", "rt", "macros", "time", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
tracing-subscriber = "0.3"

[build-dependencies]
capnpc = "0.19"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]