[package]
name = "amp-sdk"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Avalanche Matchmaking Protocol SDK for Rust"
license = "Apache-2.0"
repository = "https://github.com/BradMyrick/Avalanche-Matchmaking-Protocol"
homepage = "https://github.com/BradMyrick/Avalanche-Matchmaking-Protocol"
documentation = "https://docs.amp.avalanche.dev"

[lib]
name = "amp_sdk"
path = "src/lib.rs"

[features]
default = []
# Enables `AmpClient::dial_tls` and related TLS support.
tls = ["dep:tokio-rustls", "dep:rustls"]

[dependencies]
capnp = "0.19"
capnp-rpc = "0.19"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1.35", features = ["net", "rt", "macros", "time", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
# Optional TLS support.
rustls = { version = "0.23", default-features = false, optional = true }
tokio-rustls = { version = "0.26", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
tracing-subscriber = "0.3"

[build-dependencies]
capnpc = "0.19"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
