[package]
name = "amp-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version = "1.85"
description = "Avalanche Matchmaking Protocol SDK for Rust"
repository = "https://github.com/BradMyrick/Avalanche-Matchmaking-Protocol"
homepage = "https://github.com/BradMyrick/Avalanche-Matchmaking-Protocol"
documentation = "https://docs.amp.avalanche.dev"

[lib]
name = "amp_sdk"
path = "src/lib.rs"

[features]
default = []
# Enables `AmpClient::dial_tls` and related TLS support.
tls = ["dep:tokio-rustls", "dep:rustls"]

[dependencies]
capnp = "0.19"
capnp-rpc = "0.19"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1.35", features = ["net", "rt", "macros", "time", "io-util", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
# EIP-712 outcome-digest computation (keccak256 + 256-bit matchId parsing).
sha3 = "0.10"
ethnum = "1"
# Optional TLS support.
rustls = { version = "0.23", default-features = false, optional = true }
tokio-rustls = { version = "0.26", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
tracing-subscriber = "0.3"
hex = "0.4"

[build-dependencies]
capnpc = "0.19"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
